cilium/CiliumNetworkPolicy-allow-hubblerelay-ingress-hubbleui.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubblerelay-ingress-hubbleui
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: hubble-ui
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
